# smcdet

./: .gitignore  .pre-commit-config.yaml  README.md  blocksmc.ipynb  blocksmc.py  dists.py  example.ipynb  image.py  images.py  prior.py  propagate.py  pyproject.toml  requirements.txt  scratch.ipynb  smc.py
data/BBBC039/: true_counts.pt
experiments/basic/: generate_images.py  run_sep.py  run_smc.py
experiments/cells/: generate_images.py  run_full_batch.py  run_small_batch.py  watershed.ipynb
experiments/divide_and_conquer/: README.md  generate_images.py  run_sep.py  run_smc.py
experiments/m71/: checkerboard_8x8.ipynb  m71.ipynb  psf_comparison.ipynb  run_checkerboard.py  run_sep.py  run_smc.py  simulator_checks.ipynb  smc_example.ipynb
experiments/m71semisynthetic/: generate_images.py  run_sep.py  run_smc.py  simulator_checks.ipynb
experiments/m71synthetic/: divideandconquer.ipynb  generate_images.py  run_sep.py  run_smc.py
experiments/no_tiles_16x16/: run_smc.py
experiments/smc_vs_sep/: README.md  generate_images.py  results.ipynb  run.py  run_sep.py  run_smc.py  (+1 more)
figures/: figure1.ipynb
manuscript/: figure1.ipynb  manuscript.tex  references.bib
notebooks/: bbbc039.ipynb  checkerboard.ipynb  example.ipynb  flow_matching.ipynb  mcmc.ipynb  smc.ipynb
smc/: aggregate.py  distributions.py  images.py  kernel.py  loglikelihood.py  metrics.py  prior.py  sampler.py
smc-obj-det/: aggregate.py  prior.py
smcdet/: aggregate.py  checkerboard.py  distributions.py  images.py  kernel.py  metrics.py  prior.py  sampler.py
tests/: test_smoke.py
utils/: misc.py
(+366 files in other folders)
