[project]
name = "smcdet"
version = "0.1.0"
description = "Probabilistic object detection with sequential Monte Carlo"
authors = [
    {name = "Tim White", email = "twhit@umich.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "numpy>=1.26,<2",
    "scipy>=1.15",
    "matplotlib>=3.8",
    "astropy>=6.1",
    "einops>=0.8",
    "galsim>=2.7",
    "sep>=1.4",
    "reproject>=0.14",
    "pytorch-lightning>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
